--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Assicurazioni Zeus</title>
+
+    <!-- Link al CSS -->
+    <link rel="stylesheet" href="/src/assets/styles.css" />
+    
+    <!-- Meta informazioni generali -->
+    <meta name="description" content="Sito Web per Assicurazioni Zeus" />
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <div id="root"></div>  <!-- Questo è il punto di montaggio di React -->
   </body>
 </html>
