--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Assicurazioni Zeus</title>
 
     <!-- Link al CSS -->
-    <link rel="stylesheet" href="/src/assets/styles.css" />
+    <link rel="stylesheet" href="/src/assets/index.css" />
     
     <!-- Meta informazioni generali -->
     <meta name="description" content="Sito Web per Assicurazioni Zeus" />
